--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -3,11 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ScienceFragment">
+    tools:context=".ui.BookmarkFragment">
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/science_recycler"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:text="Bookmark fragment" />
+
 </FrameLayout>
