--- a/app/src/main/res/layout/fragment_detail_news.xml
+++ b/app/src/main/res/layout/fragment_detail_news.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ScienceFragment">
+    tools:context=".ui.DetailNews">
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/science_recycler"
+    <WebView
+        android:id="@+id/web_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
