--- a/app/src/main/res/layout/news_list.xml
+++ b/app/src/main/res/layout/news_list.xml
@@ -16,10 +16,10 @@
 
         <ImageView
             android:id="@+id/news_image"
-            android:layout_width="200dp"
-            android:layout_height="180dp">
+            android:layout_width="208dp"
+            android:layout_height="286dp">
 
-            </ImageView>
+        </ImageView>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -70,6 +70,14 @@
             android:text="published_date"
             android:textColor="#B71C1C"
             android:textSize="16sp"></TextView>
+
+        <Button
+            android:id="@+id/seeMore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="See More"
+            android:backgroundTint="#F4D03F"
+            android:layout_marginLeft="280dp"/>
 
 
     </LinearLayout>
